--- a/src/index.css
+++ b/src/index.css
@@ -411,6 +411,91 @@ nav a:hover {
 }
 
 /*---------------------------------------*/
+/*----------------MOBILE NAVBAR----------*/
+/*---------------------------------------*/
+.navbar-spacer {
+    height: 60px;
+}
+.navbar {
+    background-color: black;
+    position: fixed;
+    z-index: 1100;
+    top: 0;
+    width: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    height: 80px;
+}
+
+.menu-bars {
+    margin-left: 2rem;
+    font-size: 2rem;
+    background: none;
+}
+
+.nav-menu {
+    background-color: black;
+    width: 250px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    transition: 850ms;
+}
+
+.nav-menu.active {
+    left: 0;
+    transition: 350ms;
+}
+
+.nav-text {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding: 8px 0px 8px 16px;
+    list-style: none;
+    height: 60px;
+}
+
+.nav-text a {
+    text-decoration: none;
+    color: var(--white);
+    font-size: 18px;
+    width: 95%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+    border-radius: 4px;
+}
+.nav-text a:hover {
+    background-color: var(--navHover);
+}
+
+.nav-menu-items {
+    width: 100%;
+}
+
+.navbar-toggle {
+    background-color: black;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+.nav-title {
+    margin-left: 16px;
+}
+
+
+
+
+
+/*---------------------------------------*/
 /*-------------Project Cards-------------*/
 /*---------------------------------------*/
 .projectCard {
