--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,7 @@ a:visited {
 }
 
 .page {
+    margin-top: 100px;
     padding-bottom: 30px;
     margin-left: 20px;
     margin-right: 20px;
@@ -642,6 +643,43 @@ div.desc {
         transform: scale(1);
     }
 }
+/*---------------------------------------*/
+/*----------MEET THE Board CARDS---------*/
+/*---------------------------------------*/
+
+.boardMemberCardContainer {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.boardMemberCard {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: var(--lightShadow);
+    width: 400px;
+    height: 500px;
+    margin: 3%;
+    text-align: center;
+}
+
+.boardMemberPortrait {
+    width: auto;
+    height: auto;
+    max-width: 260px;
+    max-height: 300px;
+    border-radius: 10px;
+    box-shadow: var(--reallyLightShadow);
+}
+
+
+
+
+
+
+
 
 /*---------------------------------------*/
 /*----------MEET THE TEAM CARDS----------*/
