--- a/src/index.css
+++ b/src/index.css
@@ -729,10 +729,17 @@ div.desc {
     display: grid;
     justify-content: space-evenly;
 }
-
-.leaderPortrait {
+.leaderPortraitContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 260px;
     height: 300px;
+}
+.leaderPortrait {
+    width: 100%;
+    height: 100%;
+    content-fit: cover;
     border-radius: 10px;
     box-shadow: var(--reallyLightShadow);
 }
@@ -989,6 +996,12 @@ div.desc {
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
+    }
+    .leaderCardInfo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
 @media only screen and (max-width: 400px) {
