--- a/src/index.css
+++ b/src/index.css
@@ -86,27 +86,26 @@ a:visited {
 footer {
     background-color: var(--navy);
     color: var(--white);
-    padding-top: 15px;
-    padding-bottom: 5px;
+    padding: 15px 0;
     text-align: center;
 }
 
 .socialMediaContainer {
-    width: 325px;
-    display: grid;
-    grid-template-columns: auto auto auto;
+    display: flex;
     justify-content: center;
+    gap: 20px;
 }
 
 .socialMediaLink {
-    column-gap: 5px;
+    text-decoration: none;
+    color: var(--white);
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
 .socialMediaText {
-    width: 100px;
     font-size: 16px;
-    color: var(--white);
-    text-decoration: none;
     margin: 0;
 }
 
