--- a/src/index.css
+++ b/src/index.css
@@ -228,6 +228,7 @@ footer {
     height: auto;
     max-width: 800px;
     width: 100%;
+    border-radius: 10px;
 }
 
 /*--------------------------------------*/
@@ -452,7 +453,7 @@ nav a.active {
     align-items: center;
     background-color: var(--navy);
     position: fixed;
-    z-index: 1100;
+    z-index: 100;
     top: 0;
     width: 100%;
     height: 80px;
@@ -466,7 +467,7 @@ nav a.active {
 }
 
 .nav-menu {
-    background-color: black;
+    background-color: var(--navy);
     width: 250px;
     height: 100vh;
     display: flex;
@@ -516,10 +517,12 @@ nav a.active {
 
 .nav-menu-items {
     width: 100%;
+    margin-left: -100px;
+    margin-top: 0px;
 }
 
 .navbar-toggle {
-    background-color: black;
+    background-color: var(--navy);
     width: 100%;
     height: 80px;
     display: flex;
@@ -678,7 +681,7 @@ div.desc {
 /*---------------------------------------*/
 
 .MeetTheTeam {
-    margin-top: 100px;
+    margin-top: 50px;
 }
 .container {
     padding: 0 16px;
