--- a/src/index.css
+++ b/src/index.css
@@ -659,12 +659,12 @@ div.desc {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
     box-shadow: var(--lightShadow);
     width: 400px;
     height: 500px;
     margin: 3%;
     text-align: center;
+    border-radius: 15px;
 }
 
 .boardMemberPortrait {
