--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -660,8 +660,8 @@ div.desc {
     align-items: center;
     justify-content: center;
     box-shadow: var(--lightShadow);
-    width: 400px;
-    height: 500px;
+    width: 375px;
+    height: 450px;
     margin: 3%;
     text-align: center;
     border-radius: 15px;
@@ -670,10 +670,19 @@ div.desc {
 .boardMemberPortrait {
     width: auto;
     height: auto;
-    max-width: 260px;
-    max-height: 300px;
+    width: 260px;
+    height: 300px;
     border-radius: 10px;
     box-shadow: var(--reallyLightShadow);
+}
+
+.boardMemberTitleContainer {
+    margin-top: 10px;
+}
+
+.boardMemberTitle {
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 /*---------------------------------------*/
@@ -738,7 +747,6 @@ div.desc {
 .leaderPortrait {
     width: 100%;
     height: 100%;
-    content-fit: cover;
     border-radius: 10px;
     box-shadow: var(--reallyLightShadow);
 }
