--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -137,6 +137,8 @@ footer {
 
 #Projects {
     margin-top: 100px;
+    justify-content: center;
+    align-items: center;
 }
 
 .sponsorship {
@@ -557,10 +559,8 @@ nav a.active {
 }
 
 .projectCardContainer {
-    display: grid;
+    display: flex;
     justify-content: space-evenly;
-    margin-left: -20px;
-    margin-right: -20px;
 }
 
 div.gallery {
@@ -625,7 +625,7 @@ div.desc {
     text-align: center;
     color: var(--lightGrey);
     padding: 10px 0;
-    height: 150px;
+    height: 350px;
 }
 
 /* Add Animation */
@@ -1031,7 +1031,6 @@ div.desc {
 }
 
 .modal {
-    display: flex;
     justify-content: space-evenly;
     align-items: center;
     box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
@@ -1042,6 +1041,6 @@ div.desc {
     --modalWidth: 80%;
     width: var(--modalWidth);
     top: 70px;
-    bottom: 70px;
+    bottom: 300px;
     left: calc(50% - var(--modalWidth) / 2);
 }
