--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1044,3 +1044,11 @@ div.desc {
     bottom: 300px;
     left: calc(50% - var(--modalWidth) / 2);
 }
+
+.closeButton {
+    color: var(--navy);
+    width: 30px;
+    height: 30px;
+    margin: 10px;
+    float: right;
+}
