--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -799,10 +799,9 @@ div.desc {
 }
 
 .battlebotCardContainer {
-    display: grid;
+    display: flex;
     justify-content: space-evenly;
-    margin-left: -20px;
-    margin-right: -20px;
+    
 }
 
 .battlebotSeasonCard {
@@ -813,11 +812,40 @@ div.desc {
     margin: 3%;
     text-align: center;
     padding: 10px 40px 0px 40px;
+    display: grid;
+    justify-content: space-evenly;
+}
+
+.battlebotNextSeasonCard {
+    box-shadow: var(--lightShadow);
+    width: 350px;
+    height: 150px;
+    float: center;
+    margin: 3%;
+    text-align: center;
+    padding: 10px 40px 0px 40px;
+    border-radius: 10px;
 }
 
 .battlebotSeasonCardContainer {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
+    display: flex;
+    grid-template-columns: auto;
+    justify-content: space-evenly;
+    margin-left: -20px;
+    margin-right: -20px;
+}
+
+.battlebotNextSeasonCard {
+    box-shadow: var(--lightShadow);
+    width: 350px;
+    height: 110px;
+    float: center;
+    margin: 3%;
+    text-align: center;
+    padding: 10px 40px 0px 40px;
+}
+
+.battlebotNextSeasonCardContainer {
     justify-content: space-evenly;
     margin-left: -20px;
     margin-right: -20px;
@@ -825,6 +853,14 @@ div.desc {
 
 #prevSemesters {
     padding-bottom: 100px;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+#nextSemesters {
+    border-radius: 10px;
+    padding-top: 50px;
+    padding-bottom: 10px;
     margin-left: 20%;
     margin-right: 20%;
 }
@@ -902,6 +938,11 @@ div.desc {
         margin-left: 10%;
         margin-right: 10%;
     }
+    #nextSemesters {
+        border-radius: 10px;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
     #President {
         grid-area: 1/1/1/1;
     }
@@ -942,6 +983,10 @@ div.desc {
         margin-left: 5%;
         margin-right: 5%;
     }
+    #nextSemesters {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
     .sponsorimgs {
         flex-direction: column;
     }
@@ -953,7 +998,14 @@ div.desc {
     .battlebotSeasonCardContainer {
         grid-template-columns: auto auto;
     }
+    .battlebotNextSeasonCardContainer {
+        grid-template-columns: auto auto;
+    }
     #prevSemesters {
+        margin-left: 20%;
+        margin-right: 20%;
+    }
+    #nextSemesters {
         margin-left: 20%;
         margin-right: 20%;
     }
@@ -993,6 +1045,10 @@ div.desc {
         margin-left: 10%;
         margin-right: 10%;
     }
+    #nextSemesters {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
     #DiscordWidget {
         width: 100%;
         display: flex;
@@ -1015,7 +1071,14 @@ div.desc {
     .battlebotSeasonCardContainer {
         grid-template-columns: auto;
     }
+    .battlebotNextSeasonCardContainer {
+        grid-template-columns: auto;
+    }
     #prevSemesters {
+        margin-left: 20%;
+        margin-right: 20%;
+    }
+    #nextSemesters {
         margin-left: 20%;
         margin-right: 20%;
     }
@@ -1047,6 +1110,7 @@ div.desc {
 
 .closeButton {
     color: var(--navy);
+    cursor: pointer;
     width: 30px;
     height: 30px;
     margin: 10px;
