--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -645,9 +645,7 @@ div.desc {
 }
 
 .boardMemberPortrait {
-    width: auto;
-    height: auto;
-    width: 260px;
+    max-width: 100%;
     height: 300px;
     border-radius: 10px;
     box-shadow: var(--reallyLightShadow);
