--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -622,7 +622,7 @@ div.desc {
     }
 }
 /*---------------------------------------*/
-/*----------MEET THE Board CARDS---------*/
+/*----------MEET THE BOARD CARDS---------*/
 /*---------------------------------------*/
 
 .boardMemberCardContainer {
@@ -645,9 +645,7 @@ div.desc {
 }
 
 .boardMemberPortrait {
-    width: auto;
-    height: auto;
-    width: 260px;
+    max-width: 100%;
     height: 300px;
     border-radius: 10px;
     box-shadow: var(--reallyLightShadow);
