--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -90,140 +90,8 @@ footer {
     text-align: center;
 }
 
-.socialMediaContainer {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-.socialMediaLink {
-    text-decoration: none;
-    color: var(--white);
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-
-.socialMediaText {
-    font-size: 16px;
-    margin: 0;
-}
-
-.logoBanner {
-    background-color: var(--navy);
-    padding-top: 50px;
-    padding-bottom: 10px;
-    margin-left: -20px;
-    margin-right: -20px;
-}
-
-.logoBanner h1 {
-    color: var(--white);
-}
-
-#bannerLogo {
-    width: 200px;
-}
-
-#DiscordWidget {
-    margin: auto;
-    float: right;
-}
-
-#AboutUs {
-    width: calc(100% - 374.73px);
-    min-height: 500px;
-}
-
-#Projects {
-    margin-top: 100px;
-    justify-content: center;
-    align-items: center;
-}
-
-.sponsorship {
-    margin-top: 50px;
-    width: 100%;
-    overflow-x: hidden;
-}
-
-.sponsorimgs {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
-.sponsor {
-    max-width: 100%;
-    width: auto;
-    height: 100px;
-    margin: 20px;
-}
-
-#RIOTlogo {
-    -webkit-transition: -webkit-transform 0.4s ease-in-out;
-    transition: transform 0.4s ease-in-out;
-}
-
-#SignUp {
-    background-color: var(--navy);
-    color: var(--white);
-    text-decoration: none;
+.desc {
     text-align: center;
-    padding-top: 12px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    float: center;
-    width: 225px;
-    height: auto;
-
-    resize: horizontal;
-    border-radius: 10px;
-    transition: all 0.5s;
-}
-
-#SignUp:hover {
-    box-shadow:
-        0 12px 16px 0 rgba(0, 0, 0, 0.24),
-        0 17px 50px 0 rgba(0, 0, 0, 0.19);
-}
-
-#SignUpUnavailable {
-    background-color: var(--grey);
-    color: var(--white);
-    text-decoration: none;
-    text-align: center;
-    padding-top: 12px;
-    padding-bottom: 10px;
-    float: center;
-    width: 300px;
-    height: auto;
-    resize: horizontal;
-    border-radius: 10px;
-}
-
-#DonateButton {
-    background-color: var(--navy);
-    color: var(--white);
-    text-decoration: none;
-    text-align: center;
-    padding-top: 12px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    float: center;
-    width: 450px;
-    resize: horizontal;
-    border-radius: 10px;
-    transition: all 0.5s;
-}
-
-#DonateButton:hover {
-    box-shadow:
-        0 12px 16px 0 rgba(0, 0, 0, 0.24),
-        0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 .default-img {
@@ -233,230 +101,8 @@ footer {
     border-radius: 10px;
 }
 
-/*---------------------------------------*/
-/*----------------NAVBAR-----------------*/
-/*---------------------------------------*/
-
-
-
-
-/*---------------------------------------*/
-/*----------------MOBILE NAVBAR----------*/
-/*---------------------------------------*/
-
-.font-16 {
-    font-size: 16px;
-}
-
-.font-12 {
-    font-size: 12px;
-}
-
-/*---------------------------------------*/
-/*-------------Placeholder---------------*/
-/*---------------------------------------*/
-
-.Placeholder img {
-    max-width: 500px;
-    width: 100%;
-    height: auto;
-}
-
-/*---------------------------------------*/
-/*-------------Project Cards-------------*/
-/*---------------------------------------*/
-
-
-.projectCardContainer {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-div.gallery {
-    margin: 5px;
-    border: 1px solid var(--lightGrey);
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    width: 301.6px;
-    float: left;
-}
-
-div.gallery img {
-    width: 300px;
-    height: 200px;
-}
-
-.projectCard:hover {
-    opacity: 0.7;
-    cursor: pointer;
-}
-
-/* Caption of Modal Image */
-#caption {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
-    text-align: center;
-    color: var(--lightGrey);
-    padding: 10px 0;
-    height: 350px;
-}
-
-/* Add Animation */
-#caption {
-    animation-name: zoom;
-    animation-duration: 0.6s;
-}
-
-@keyframes zoom {
-    from {
-        transform: scale(0.1);
-    }
-
-    to {
-        transform: scale(1);
-    }
-}
-/*---------------------------------------*/
-/*----------MEET THE BOARD CARDS---------*/
-/*---------------------------------------*/
-
-.boardMemberCardContainer {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-
-/*---------------------------------------*/
-/*----------MEET THE TEAM CARDS----------*/
-/*---------------------------------------*/
-
-.MeetTheTeam {
-    margin-top: 50px;
-}
 .container {
     padding: 0 16px;
-}
-
-
-#leadership,
-#teamLeads,
-#otherMembers {
-    padding-bottom: 75px;
-}
-
-
-
-.leaderCardContainer {
-    display: grid;
-    justify-content: space-evenly;
-}
-
-/*Team lead cards*/
-
-
-.teamLeadCardContainer {
-    display: grid;
-    justify-content: space-evenly;
-    margin-left: -20px;
-    margin-right: -20px;
-}
-
-/*Member cards*/
-
-.memberCardContainer {
-    display: grid;
-    justify-content: space-evenly;
-    margin-left: -20px;
-    margin-right: -20px;
-}
-
-/*---------------------------------------*/
-/*------------BATTLEBOT CARDS------------*/
-/*---------------------------------------*/
-
-.battlebotCard {
-    box-shadow: var(--lightShadow);
-    background-color: var(--background-color);
-    width: 300px;
-    height: 125px;
-    border-radius: 10px;
-    padding: 5px 20px 0px 20px;
-    margin: 3%;
-    text-align: center;
-}
-
-
-.battlebotCardContainer {
-    display: grid;
-    justify-content: space-evenly;
-    grid-template-columns: auto auto auto;
-    top: 70px;
-    height: var(--modalHeight);
-}
-
-
-.battlebotSeasonCard {
-    box-shadow: var(--lightShadow);
-    width: 150px;
-    height: 100px;
-    border-radius: 10px;
-    float: center;
-    margin: 3%;
-    text-align: center;
-    padding: 10px 40px 0px 40px;
-    display: grid;
-    justify-content: space-evenly;
-}
-
-.battlebotSeasonCard:hover {
-    opacity: 0.7;
-    cursor: pointer;
-}
-
-.battlebotSeasonCardContainer {
-    display: flex;
-    grid-template-columns: auto;
-    justify-content: space-evenly;
-    margin-left: -20px;
-    margin-right: -20px;
-}
-
-.battlebotNextSeasonCard {
-    box-shadow: var(--lightShadow);
-    width: 350px;
-    height: 110px;
-    float: center;
-    margin: 3%;
-    text-align: center;
-    padding: 10px 40px 0px 40px;
-}
-
-.battlebotThisSeasonCardContainer {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    justify-content: space-evenly;
-    margin-left: -20%;
-    margin-right: -20%;
-}
-
-#prevSemesters {
-    padding-bottom: 100px;
-    margin-left: 20%;
-    margin-right: 20%;
-}
-
-#thisSemester {
-    border-radius: 10px;
-    padding-top: 50px;
-    padding-bottom: 10px;
-    margin-left: 20%;
-    margin-right: 20%;
-}
-
-#nextSemesterBlurb {
-    float: center;
 }
 
 /*---------------------------------------*/
@@ -688,7 +334,6 @@ div.gallery img {
     overflow: hidden;
 }
 
-
 .modal {
     justify-content: space-evenly;
     align-items: center;
@@ -706,22 +351,6 @@ div.gallery img {
     left: calc(50% - var(--modalWidth) / 2);
 }
 
-.popup {
-    justify-content: space-evenly;
-    align-items: center;
-    box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
-    background-color: var(--white);
-    border: 2px solid var(--white);
-    border-radius: 12px;
-    position: fixed;
-    --modalWidth: 80%;
-    width: var(--modalWidth);
-    
-    top: 70px;
-    bottom: 100px;
-    left: calc(50% - var(--modalWidth) / 2);
-}
-
 .closeButton {
     color: var(--navy);
     cursor: pointer;
@@ -730,4 +359,3 @@ div.gallery img {
     margin: 10px;
     float: right;
 }
-
