--- a/src/components/battlebotsPopUp/battlebotsSeasonPopUp.css
+++ b/src/components/battlebotsPopUp/battlebotsSeasonPopUp.css
@@ -1,4 +1,4 @@
-.modal {
+.popup {
     justify-content: space-evenly;
     align-items: center;
     box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
@@ -8,17 +8,16 @@
     position: fixed;
     --modalWidth: 80%;
     width: var(--modalWidth);
+
     top: 70px;
-    bottom: 300px;
+    bottom: 100px;
     left: calc(50% - var(--modalWidth) / 2);
 }
-.projectImage {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    transition: 0.3s;
-    width: 300px;
-    height: 200px;
-}
-div.desc {
-    text-align: center;
+
+.battlebotCardContainer {
+    display: grid;
+    justify-content: space-evenly;
+    grid-template-columns: auto auto auto;
+    top: 70px;
+    height: var(--modalHeight);
 }
